--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,31 @@
+
+
 #divContainer {
     border-style: solid;
+    border-color: pink;
 display:flex;
-     
-
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+margin-top: auto;
+margin-bottom: auto;
+height: fit-content;
+width:fit-content;
 }
 
 .row {
- 
-flex:1 1 1;
-
-   
-    
-
+width: auto;
+height: auto;
+flex:none;
 }
 
 .column {
         border: 1px solid black;
-        width: 10px;
-        height: 10px;
-    
-   
+        width: 15px;
+        height: 15px;
+
+}
+
+.column:hover {
+    background-color: red;
 }
