Added new mouseover event, instead of css hover. Now, when you hover over a box, it will permanently change color because of the class added to the selected div. In addition, I created a new button, the Clear button. When clicked, it will return the canvass to the original state.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,17 @@
 
+.clear {
+    border-style: solid;
+    border-color: black;
 
+height: 30px;
+width: 50px;
+
+
+}
+
+.clear:hover {
+    background-color: azure;
+}
 #divContainer {
     border-style: solid;
     border-color: pink;
@@ -26,6 +38,8 @@ flex:none;
 
 }
 
-.column:hover {
-    background-color: red;
+.cola {
+    background-color: blue;
 }
+
+
