--- a/styles.css
+++ b/styles.css
@@ -2,44 +2,44 @@
 .clear {
     border-style: solid;
     border-color: black;
-
-height: 30px;
-width: 50px;
-
-
+    height: 30px;
+    width: 50px;
 }
 
 .clear:hover {
     background-color: azure;
 }
+
 #divContainer {
     border-style: solid;
     border-color: pink;
-display:flex;
-justify-content: center;
-margin-left: auto;
-margin-right: auto;
-margin-top: auto;
-margin-bottom: auto;
-height: fit-content;
-width:fit-content;
+    display:flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    height: 500px; 
+    width: 500px;
 }
 
 .row {
-width: auto;
-height: auto;
-flex:none;
+    width: 100%;
+    height: 100%;
+    flex: 1; 
+    display: grid;
 }
 
 .column {
-        border: 1px solid black;
-        width: 15px;
-        height: 15px;
+    border: 1px solid black;
+    width: auto;
+    height: auto; 
 
 }
 
 .cola {
     background-color: blue;
 }
+
 
 
