--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ h1 {
     width: 500px;
     border-radius: 2px;
     background-color: white;
+  
 }
 
 .row {
@@ -71,7 +72,7 @@ h1 {
     height: 100%;
     flex: 1; 
     display: grid;
-    background-color: white;
+    /*background-color: white; */
 }
 
 .column {
@@ -82,5 +83,5 @@ h1 {
 }
 
 .cola {
-    background-color: blue;
+    background-color: var(--bg-color);
 }
